<resources>
    <string name="app_name">step</string>
    <string name="steps">Steps</string>
    <string name="goal_reached">Goal reached</string>

    <string name="actual_and_target_steps">%1$d / %2$s steps</string>
    <string name="activity_target">Activity target</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="walk">walk</string>
    <string name="aerobic">aerobic</string>
    <string name="run">run</string>
    <string name="num_run_steps">1500</string>
    <string name="num_aerobic_steps">440</string>
    <string name="num_walk_steps">630</string>
    <string name="date">15.02.2017</string>
</resources>
