<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="17dp"
    android:background="@drawable/item_statistics_background">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorBorder"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lin_lay_for_time_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="17dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/date"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/amount_of_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/actual_and_target_steps"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_lay_for_scale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/rounded_shape"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin_lay_for_time_steps">

        <ProgressBar
            android:id="@+id/progress_walk"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:progress="0"
            android:progressDrawable="@drawable/custom_progress_bar_steps" />

        <!--
        <ProgressBar
            android:id="@+id/progress_walk"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_marginEnd="3dp"
            android:background="@color/colorWalk"
            android:progressTint="@color/colorWalk"
            />

        <ProgressBar
            android:id="@+id/progress_aerobic"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_marginEnd="3dp"
            android:background="@color/colorAerobic"
            android:progressBackgroundTint="@color/colorAerobic"
            android:progressTint="@color/colorAerobic" />

        <ProgressBar
            android:id="@+id/progress_run"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:background="@color/colorRun"
            android:progressBackgroundTint="@color/colorRun"
            android:progressTint="@color/colorRun" />
            -->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_lay_for_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="17dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin_lay_for_scale">

        <TextView
            android:id="@+id/walk_steps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/num_walk_steps"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/aerobic_steps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/num_aerobic_steps"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/run_steps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/num_run_steps"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_lay_for_scoreName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin_lay_for_score">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/walk"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/aerobic"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/run"
            android:textSize="12sp" />

    </LinearLayout>


    <!-- hide until reached the target -->
    <LinearLayout
        android:id="@+id/lin_lay_for_winner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin_lay_for_scoreName"
        app:layout_constraintVertical_bias="0.0">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:background="@color/colorBorder" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/goal_reached_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="17dp"
                android:paddingTop="10dp"
                android:paddingEnd="17dp"
                android:paddingBottom="10dp"
                android:text="@string/goal_reached"
                android:textColor="@color/colorGoal"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/star"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="17dp"
                android:clickable="false"
                android:src="@drawable/ic_star" />
        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorBorder"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>